# stone

./: .gitignore  .rules  1.parquet.zst  package.json  pnpm-lock.yaml  stone-release.keystore  svelte.config.js  uno.config.js  vite.config.js  wrangler.toml
.github/workflows/: build-android.yml
docs/: QWEN.md  data-layer-design.md  r2-migration.md  search-audit.md  search-implementation-plan.md  tauri-android-plan.md  tauri-sql-plan.md
migrations/: 0001_init.sql
schemas/: books.en.sql  books.sql  books.zh.sql  init.sql
scripts/: d1-to-r2.mjs  env.js  generate-android-keystore.sh  generate-icons.mjs  generate-tauri-icons.sh  split-parquet.mjs
scripts/update/: generate-manifest.sh
seeds/: json-parquet.js  upload-bible-r2.js  upload-r2.js  upload-sda-r2.js
src/: app.html  hooks.client.js  hooks.server.js  service-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  seed.rs
src/api/search/: +server.js
src/lib/: Cid.svelte  booksStore.svelte.js  config.js  data.svelte.js  format.js  importStore.svelte.js  index.js  nav.js  parquet-common.js  parquet.js  pwa.js  r2-upload.js  r2-upload.ts  setTheme.svelte.js  svelte-attributify-to-class.js  tauri.js  wakeLock.js
src/lib/admin/: api.js
src/lib/bible/: Chapter.svelte  Dir.svelte  bible.json  searchStore.svelte.js
src/lib/book/: BookDir.svelte  (+1 more)
src/routes/: +error.svelte  +layout.js  +layout.svelte
static/: _headers  manifest.json
static/.well-known/: assetlinks.json
(+129 files in other folders)
